monitoring/7.ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: prometheus.k3s.shpaq.org
    http:
      paths:
      - backend:
          serviceName: prometheus-k3s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.k3s.shpaq.org
    secretName: prometheus-k3s-shpaq-org-tls
